# Unity_DWM_Spatialization

./: .gitignore  .gitmodules  LICENSE  README.md
Assets/Audio/Mixers/: DWM.mixer  Mixer.mixer  Regular.mixer
Assets/Graphics/Materials/: Grid.shadergraph  Red.mat
Assets/Graphics/Models/: CubeReverse.blend
Assets/Scene/: DWM Audio Source.prefab  SampleScene.unity
Assets/Scene/Test 1/: RotatingArm.anim  ZMovement.anim
Assets/Scene/Test 2/: RotatingArm.anim  ZMovement.anim
Assets/Scene/Test 3/: Alt DWM Audio Source Variant.prefab
Assets/Scene/Test 4/: Bouncy DWM Audio Source.prefab  Bouncy.physicMaterial
Assets/Scene/Test 5/: Movement.anim
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: AudioManager.cs  DWM_AudioManager.cs  DWM_AudioSource.cs  DWM_Demo.cs  DebugListeningSetup.cs  DemoBouncySource.cs  DemoLoopAnimation.cs  DemoRepeatPlay.cs
Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
Native/: CMakeLists.txt  PluginList.h  dwm.h  plugin.cpp  plugin_config.h.in
ProjectSettings/: ProjectSettings.asset
